0.0.2

User Interface:
- Add accessibility support with screen reader integration
- Implement SetControlAccessibility function for accessible names and descriptions
- Implement NotifyAccessibilityStateChange function for screen reader notifications
- Implement IsScreenReaderActive function to detect active screen readers (NVDA, Narrator, JAWS, etc.)

0.0.1

Memory Management:
- Add comprehensive memory management system with leak detection
- Add memory pools for frequent allocations
- Add RAII resource management patterns (AutoResource, AutoString, AutoArray)
- Add error-safe allocation patterns with AllocationSet and BulkCleanup
- Add memory error handling with double-free and use-after-free detection
- Add buffer overrun detection with guard patterns in debug builds
- Add thread-safe allocation tracking with critical sections
- Add memory leak detection with hash table optimization
- Migrate all existing allocations to safe memory wrappers
- Implement robust memory management with validated allocation tracking
- Fix critical SafeFree bug with allocation integrity validation
- Replace complex hash table with reliable linear search for allocation tracking
- Fix double-free detection to respect leak detection state
- Fix Base64DecodeWide memory corruption issues
- Fix cached metadata allocation problems
- Fix SAFE_REALLOC buffer overrun detection
- Fix memory manager circular dependency in CreateMemoryPool
- Fix allocation removal logic to prevent hash table corruption

User Interface:
- Unify dialog system with consistent 2-tab layout
- Add HiDPI and font-aware About dialog
- Add dynamic layout system that adjusts to system DPI and font settings
- Fix dialog line endings for proper Windows text control display
- Fix debug dialog line endings for Windows text controls
- Fix unified dialog layout per Microsoft UI standards
- Add debug test buttons for dialog system testing (debug mode only)
- Replace all legacy dialog functions with unified dialog system