@@ -14,4 +14,15 @@ void NotifyAccessibilityStateChange(HWND hwnd, DWORD event);
 // Check if screen reader is active
 BOOL IsScreenReaderActive(void);
 
+// High contrast mode support functions
+
+// Check if high contrast mode is enabled
+BOOL IsHighContrastMode(void);
+
+// Get system color for high contrast mode
+COLORREF GetHighContrastColor(int colorType);
+
+// Apply high contrast colors to a dialog
+void ApplyHighContrastColors(HWND hDlg);
+
 #endif // ACCESSIBILITY_H
